--- a/index.html
+++ b/index.html
@@ -199,28 +199,28 @@
         <div class="f fac gap16 f_f fw h f_auto">
 
             <a href="" class="f fc gap16 f_296 shadow fac pad4 _br16 matte">
-                <img class="_br16" src="img/_1.webp" alt="Автомийка">
+                <img class="_br16" src="img/_1.jpg" alt="Автомийка">
                 <span class="border_link">
                     Бездоганна автомийка
                 </span>
             </a>
 
             <a href="" class="f fc gap16 f_296 shadow fac pad4 _br16 matte">
-                <img class="_br16" src="img/_2.webp" alt="Автомийка">
+                <img class="_br16" src="img/_2.jpg" alt="Автомийка">
                 <span class="border_link">
                     Миття килимів
                 </span>
             </a>
 
             <a href="" class="f fc gap16 f_296 shadow fac pad4 _br16 matte">
-                <img class="_br16" src="img/_3.webp" alt="Хімчистка">
+                <img class="_br16" src="img/_3.jpg" alt="Хімчистка">
                 <span class="border_link">
                     Відмінна хімчистка
                 </span>
             </a>
 
             <a href="" class="f fc gap16 f_296 shadow fac pad4 _br16 matte">
-                <img class="_br16" src="img/_4.webp" alt="Кафе">
+                <img class="_br16" src="img/_4.jpg" alt="Кафе">
                 <span class="border_link">
                     Затишне кафе
                 </span>
@@ -496,7 +496,7 @@
                 </div>
                 <div class="f_296 f f_f fc gap16 h">
                     <div class="pad16">
-                        <img class="_b_all _br16" src="img/_2.webp" alt="">
+                        <img class="_b_all _br16" src="img/_2.jpg" alt="">
                     </div>
                     <div class="f _f_">
                         <a class="btn" href="tel:+380634848248">Зателефонувати</a>
